2013-08-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (update_gpval_variables):  Missing GPVAL_* entry
	for R_AXIS.max.

2013-08-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c:  Add comment noting that axis_position_zeroaxis() must
	be called for each axis before plotting in order to set axis->term_zero.

	* src/graphics.c:  It is incorrect to skip the initial calls to
	axis_draw_2d_zeroaxis even if we know the zero axes will be drawn
	again later (e.g. grid is off or front).
	Bug #1267

	* src/datafile.c:  Fix segfault from trying to store strlen of a
	NULL column header string.

2013-08-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (pop_or_convert_from_string):  Context-dependent 
	conversion of a string containing a number to an actual number is
	documented as evaluating to either an integer or a complex variable as
	appropriate.  However up to now it has always produced a complex in
	practice.  Now we really do evaluate to an integer if the string
	contains only digits and whitespace.
	Bug #1269

	* src/datafile.c:  Generalize the substitution of columnheaders into
	a string during evaluation of 'using' or 'title' in a plot command.
	This allows inclusion of more than one columnheader into a single
	resulting string.
	Bug #1271

2013-07-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.h src/command.c (string_expand_macros do_line)
	src/misc.c (load_file):  Under some conditions, e.g. inside a multi-line
	clause in curly brackets, the input command line can be extended after
	it has already been checked for the presence of macros.  This caused any
	macros in the new part of the input line to be unrecognized.
	Now we recheck for macros whenever the input line is extended.
	Bug #1264

2013-07-06  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wtext.c:  Accept Ctrl-C to copy to clipboard.  Fix index out
	of range error if text selection extends beyond the end of line.
